Apply update version convention plugin.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -92,6 +92,7 @@ buildLogic-sdk-android-ui-library = { id = "kotox.crypto.sdk.android.ui.library"
 buildLogic-sdk-android-application = { id = "kotox.crypto.sdk.android.application" }
 buildLogic-dokka = { id = "kotox.crypto.sdk.dokka" }
 buildLogic-sdk-version-read = { id = "kotox.crypto.sdk.version.read" }
+buildLogic-sdk-version-update = { id = "kotox.crypto.sdk.version.update" }
 
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
