Rename the pipeline and name also the build so the PR is not confused by waiting for different task.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Checks
+name: CodeGuard
 
 # When this action should run
 on:
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    name: CodeGuard
     runs-on: ubuntu-latest
 
     steps:
