--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Checks
+name: CI Pipeline
 
 # When this action should run
 on:
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    name: CodeGuard
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +31,6 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run checks
-        run: ./gradlew clean spotlessCheck detekt testDebug
+        run: ./gradlew clean spotlessCheck detekt checkModuleVersions testDebug
         env:
           CRYPTO_SDK_NEWS_API_KEY: ${{ secrets.CRYPTO_SDK_NEWS_API_KEY }}
