--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,19 +15,22 @@ targetSdk = "36"
 java = "17"
 
 androidGradlePlugin = "8.13.0"
-androidMaterial = "1.12.0"
+androidMaterial = "1.13.0"
 androidPlayServicesAds = "23.6.0"
 androidxActitivty = "1.9.3"
 androidxAppcompat = "1.7.0"
 androidxBaselineProfile = "1.3.3"
-androidxComposeBom = "2025.03.00"
-androidxCore = "1.15.0"
-androidxCoreSplashScreen = "1.0.1"
+androidxComposeBom = "2025.11.00"
+androidxCore = "1.17.0"
+androidxCoreSplashScreen = "1.2.0"
 androidxDataStore = "1.1.1"
 androidxLifecycle = "2.8.7"
+androidxLifecycleViewModel = "1.0.0-alpha04"
 androidxMacrobenchmark = "1.2.4"
-androidxMedia3 = "1.5.1"
+androidxMedia3 = "1.8.0"
 androidxNavigationCompose = "2.8.4"
+androidxNavigation3 = "1.0.0-rc01"
+androidxNavigation3Material = "1.3.0-alpha03"
 androidxProfileInstaller = "1.3.1"
 androidxStartupRuntime = "1.1.1"
 androidxTest = "1.5.0"
@@ -160,8 +163,13 @@ androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", versi
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDataStore" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidxLifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
-androidx-navigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigationCompose" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "androidxLifecycleViewModel" }
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "androidxNavigation3" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "androidxNavigation3" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-material3-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "androidxNavigation3Material" }
 androidx-profileInstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "androidxProfileInstaller" }
+
 
 androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "androidxStartupRuntime" }
 
