--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
 
       # --- STEP 3: MODULE VERSIONS ---
       - name: Check Module Versions
-        id: unit
+        id: versions
         continue-on-error: true
         run: ./gradlew checkModuleVersions
 
