--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,6 @@ jobs:
 
       # REQUIRED: Enable KVM for hardware acceleration
       # Without this, GMD will fail or be extremely slow
-
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -49,6 +48,7 @@ jobs:
         run: ./gradlew spotlessCheck
 
       - name: Badge Spotless
+        if: always() && github.ref == 'refs/heads/main' # <--- generate badge only on main as there is just one gist for badges.
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.BADGE_GIST_TOKEN }}
@@ -65,6 +65,7 @@ jobs:
         run: ./gradlew detekt
 
       - name: Badge Detekt
+        if: always() && github.ref == 'refs/heads/main' # <--- generate badge only on main as there is just one gist for badges.
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.BADGE_GIST_TOKEN }}
@@ -81,6 +82,7 @@ jobs:
         run: ./gradlew checkModuleVersions
 
       - name: Badge Module Versions
+        if: always() && github.ref == 'refs/heads/main' # <--- generate badge only on main as there is just one gist for badges.
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.BADGE_GIST_TOKEN }}
@@ -97,6 +99,7 @@ jobs:
         run: ./gradlew testDebug
 
       - name: Badge Unit Tests
+        if: always() && github.ref == 'refs/heads/main' # <--- generate badge only on main as there is just one gist for badges.
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.BADGE_GIST_TOKEN }}
@@ -115,6 +118,7 @@ jobs:
         run: ./gradlew pixel4api35aospatdCheck
 
       - name: Badge Instrumented
+        if: always() && github.ref == 'refs/heads/main' # <--- generate badge only on main as there is just one gist for badges.
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.BADGE_GIST_TOKEN }}
